mdapipkg/objects/Rental__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rental_Asset__c</fullName>
        <label>Rental Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Rentals</relationshipLabel>
        <relationshipName>Rentals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rental_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rental Event</label>
        <referenceTo>Rental_Event__c</referenceTo>
        <relationshipLabel>Rentals</relationshipLabel>
        <relationshipName>Rentals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rental</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Rental_Asset__c</columns>
        <columns>Rental_Event__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Rental Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>